모듈 변경 반영

--- a/web/webscrap.ipynb
+++ b/web/webscrap.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -40,14 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists\n"
+     ]
+    }
+   ],
    "source": [
     "url = 'https://ko.wikipedia.org/wiki/%EC%95%A8%EB%9F%B0_%ED%8A%9C%EB%A7%81'\n",
-    "웹문서스냅샷파일 = webscrap.io.snapshot_webpage(url, '앨런튜링_위키.html')"
+    "웹문서스냅샷파일 = webscrap.http.download(url, '앨런튜링_위키.html')"
    ]
   },
   {
@@ -59,13 +67,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "html = webscrap.get_html(웹문서스냅샷파일)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "URL에서 바로 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "soup = webscrap.html.get_soup(웹문서스냅샷파일)"
+    "html = webscrap.get_html(url)"
    ]
   },
   {
@@ -94,7 +120,7 @@
     }
    ],
    "source": [
-    "soup.title"
+    "html.title"
    ]
   },
   {
@@ -112,53 +138,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "앨런 매티슨 튜링(영어: Alan Mathison Turing, OBE, FRS, 1912년 6월 23일 ~ 1954년 6월 7일)은 영국의 수학자, 암호학자, 논리학자이자 컴퓨터 과학의 선구적 인물이다. 알고리즘과 계산 개념을 튜링 기계라는 추상 모델을 통해 형식화함으로써 컴퓨터 과학의 발전에 지대한 공헌을 했다.[2][3][4] 튜링 테스트의 고안으로도 유명하다. ACM에서 컴퓨터 과학에 중요한 업적을 남긴 사람들에게 매년 시상하는 튜링상은 그의 이름을 따 제정한 것이다. 이론 컴퓨터 과학과 인공지능 분야에 지대한 공헌을 했기 때문에 \"컴퓨터 과학의 아버지\"라고 불린다.\n",
-      "1945년에 그가 고안한 튜링 머신은 초보적 형태의 컴퓨터로, 복잡한 계산과 논리 문제를 처리할 수 있었다. 하지만 튜링은 1952년에 당시에는 범죄로 취급되던 동성애 혐의로 영국 경찰에 체포돼 유죄 판결을 받았다.[5] 감옥에 가는 대신 화학적 거세를 받아야 했던 그는, 2년 뒤 청산가리를 넣은 사과를 먹고 자살했다.[5]\n",
-      "사후 59년만인 2013년 12월 24일에 엘리자베스 2세 여왕이 크리스 그레일링 법무부 장관의 건의를 받아들여 튜링의 동성애 죄를 사면하였다. 이어서 무죄 판결을 받고 복권되었다.[5]\n",
-      "\n",
-      "\n",
-      "튜링은 1912년 아버지 줄리어스 매시슨 튜링과 에설 사라의 둘째 아들로 태어났다. 그의 어머니는 그를 인도(차트라프루)에서 임신했지만 영국에서 낳기 원해 런던(패딩턴)으로 가서 그를 출산했다. 어려서부터 총명하여 3주 만에 읽기를 배웠으며 계산과 퍼즐에 능했다고 한다.\n",
-      "1931년 케임브리지 대학교 킹스 칼리지에 입학해 수학 전공으로 학사학위를 취득하고, 1935년 확률론 계산에서 한계중심정리에 관한 학위논문으로 킹스 칼리지 특별연구원이 되었다. 1936년 미국의 프린스턴 대학교 대학원에 입학하여 박사학위를 받았다. 1937년 영국으로 돌아와 대학에서 연구 중 튜링 기계의 개념을 도입한 논문 〈계산 가능한 수와 결정할 문제에의 응용〉을 발표했다.\n",
-      "1938년 9월 블레츨리 정부 암호학교 GCCS(현 GCHQ)에 들어갔고, 1939년 9월 4일 제2차 세계 대전이 발발한 후 독일군의 에니그마 암호를 해독하는 Hut 8의 책임자가 되어 폴란드 정보부에서 제작한 에니그마 해독기 'Bomby'를 개선한 '봄브(The Bombe)'를 개발했다.\n",
-      "이런 경험에서 만든 계산 이론은 후일 영국에서 개발되는 콜로서스(프로그래밍 가능 전자 컴퓨터)의 기술적 토대가 되기도 했다.\n",
-      "앨런 튜링은 1951년에 영국에서 범죄로 인식되던 동성애 혐의로 체포된 후 징역형과 화학적 거세형 중 선택을 해야 했고, 튜링은 연구를 계속하기 위해 거세를 선택하여 1년간 에스트로겐 주사를 맞았다. 그는 1954년 6월 8일에 죽은 채로 발견되었고, 주변에 반쯤 먹은 사과가 놓여 있었다. 부검 결과 치사량의 사이안화 칼륨(청산가리)을 주사한 사과를 먹고 자살한 것으로 밝혀졌다.[6]\n",
-      "튜링은 15살 때 처음으로 수학적 연구결과를 도출했다. 그것은 역탄젠트 함수의 무한한 연속을 어림잡을 수 있는 계산 형식으로, 크게 독창적이지는 않지만 이후 튜링의 연구의 전체적인 방향을 보여준다. 즉 그가 평생동안 연구했던 계산할 수 있는 실수의 개념이 들어가 있다.\n",
-      "튜링은 케임브리지 대학교에서 수학을 전공했으며, 특히 막스 보른의 양자역학 강의와 리하르트 쿠란트의 미분 방정식 강의를 들으며 수치 해석을 비롯해 확률론, 통계학, 수 이론, 군론 등에 관심을 가졌다.\n",
-      "1933년 튜링은 물리학자 에딩턴의 과학적 방법론을 수강하고 정규분포곡선(courbe normale)이라는 고전적 개념에 관심을 갖게 된다. 튜링은 자연 현상에서 규칙성 연구에서의 중심극한정리의 중요성을 이해하고, 독일의 수학자 린데베르크(Jarl Waldemar Lindeberg)가 1922년에 먼저 증명한 내용을 모르는 상태에서 이를 증명했다. 이 증명으로 그는 장학금을 받고 케임브리지 대학교의 특별연구원이 되었다.\n",
-      "리만 가설 등 소수의 개수에 대한 문제를 접한 튜링은 수치상으로 제타 함수를 평가했다. 이 과정에서 튜링은 제타함수 계산에 쓸 기계를 만들기 위해 장학금을 받아냈으나, 전쟁으로 인해 무산되었다가 전쟁 이후 맨체스터 대학교에서 다시 시도하게 된다. 이 기계에는 몇 가지 문제점이 있었으나, 튜링은 1953년에 제타 함수에 대한 논문을 발표한다.\n",
-      "군론은 튜링이 평생 연구해온 분야인 수치상의 문제나 계산의 유효성과 거리가 있다고 느껴질 수도 있으나, 가능한 모든 값의 치환을 통해 함수와 함수 풀이 영역 간의 구조적 상관성이라는 방법으로 튜링의 인생에 세 번의 영향을 주게 된다. 우선 1936년 튜링이 계산할 수 있는 수와 계산할 수 없는 수 사이의 경계선을 연구할 때 구조적인 계산의 유효성에 대한 기준을 제시했다. 다음으로 함수이론의 연장선의 문제였고 셋째는 군론을 간접적으로 수치 적용해 양자역학과 암호학에 이용했다. 양자역학에서 군론은 상태 개념에 연관되어 있고, 암호학에서는 치환 개념과 치환 불변성의 개념에 관련되어 있다.\n",
-      "1936년 튜링은 결정가능성 문제에 대한 부정적 증명을 해낸 후 프린스턴 대학교로 떠나게 된다. 이 때 튜링은 수리논리학의 알론조 처치와 군론의 존 폰 노이만을 만나 새로운 학문의 장을 열게 된다. 3년의 학업 이후 폰 노이만이 조교로 남을 것을 권유했으나 정중히 거절한 튜링은 케임브리지로 다시 돌아왔다.\n",
-      "튜링은 프린스턴 대학교에서 만난 처치와 함께 수리논리학의 연구를 계속하게 된다. 그는 해결 불가능성의 정도의 산술적 서열을 구축함으로써 해결 불가능성의 개념이 고려된 형식 체계 내에서 이루어진다는 인식 변화를 일구어냈다.\n",
-      "암호학과 통계학 분야에서 튜링이 전쟁동안 진척시켰던 연구 작업은 1996년 미국 정부에 의해 폐기되는 등 공개에 어려움을 겪어, 전반적으로 알려지지 않았다.[7] 하지만 “튜링이 없었다면, 영국은 전쟁에서 분명 패했을 것이다”라는 동료 D.미치의 인터뷰 증언 등을 고려할 때 그의 업적을 짐작할 수 있다.[8] 널리 알려진 바처럼 튜링은 당시 에니그마라 칭해졌던 독일군의 암호를 해독해냈으며 당시 컴퓨터의 발달에도 큰 영향을 끼쳤다. 튜링은 수리논리학에서 정의된 계산, 조작 실행에 영향을 준 추상적 기계(알고리즘), 실행화시킨 물질적 기계를 토대로 이후 정보과학의 탄생에 큰 영향을 끼치게 된다.\n",
-      "암호학은 수학, 논리학, 물리학에 연관된 분야로 튜링은 전쟁 선포 이후 암호학 부서(GCCS)에 들어갔다. 열 명 남짓의 연구팀의 수장이 된 튜링은 독일 베를린의 잠수정 등에서 보내온 메시지를 코드화하여 해독하는데 주력했다. 이 과정에서 튜링은 암호학의 새로운 기틀을 다졌으며 통계학과 기계화할 수 있는 논리적 방법을 통해 모순을 제거해 나갔다.\n",
-      "정보 개념, 혹은 데이터의 중요도는 원래 통계학적 속성인데, 선험적(a priori)가설로부터 경험적(a posteriori) 확률을 계산할 수 있는 방법을 제시한다.\n",
-      "앨런 튜링은 1945년 10월 1일 테딩턴에 위치한 국립물리연구소(National Physical Laboratory, NPL)에서 영국의 첫 번째 컴퓨터라 할 수 있는 전자 계산기 제작을 위한 수학 부서 창설을 추진했다. 그리고 맨체스터 대학교 등에서 컴퓨터에 대한 연구를 계속했다. 이 시기의 튜링은 전적으로 형태 발생과 수학적 모델화에 주력했다.\n",
-      "아버지 줄리어스 매시슨 튜링(Julius Mathison Turing), 어머니 에설 사라(Ethel Sara)\n",
-      "알론조 처치, 존 폰 노이만 등과 함께 프린스턴 대학교에서 연구 지속\n",
-      "프린스턴 대학교에서 프록터(Procter)장학금 수여\n",
-      "블레츨리 파크(Bletchley Park)의 GCCS 부서에서 영국을 포위하고 있는 독일 해군의 무선메시지 해독 작업 수행\n",
-      "미국 암호부서와의 접촉을 위해 미국에 비밀리에 입국\n",
-      "컴퓨터의 자동 계산 기계(Automatic Computing Engine; ACE)를 구축하기 위해 테딩턴에 있는 국립물리연구소(NPL)에 들어감\n",
-      "생리학과 신경과학 수업 수강\n",
-      "동성애 혐의로 재판을 받고 여성호르몬을 투여하는 형을 받음\n",
-      "튜링 기계는 튜링이 알고리즘을 설명하기 위해 도입한 가상의 기계이다. 이 기계는 한정된 종류의 기호 중 하나를 기록할 수 있는 칸들이 무한히 이어진 띠와 각 칸의 정보를 읽고 수정하는 기계로 이루어져 있다. 그리고 튜링 머신의 상태와 칸에 기록된 기호에 따라 지정된 절차를 수행한다. 튜링 머신이 수행하는 절차는 1. 현재 기계가 위치하는 칸의 기호를 수정 2. 띠의 위치 이동 3. 튜링 머신의 상태 변경 이 있다.\n",
-      "에니그마는 암호 작성과 해독을 돕는 기계로, 1918년 아르투스 슈르비우스에 의해 처음 고안되었다. 이 기계는 제 2차 세계 대전 동안 독일군이 군사 관련 정보를 암호화하는 데 쓰였다.\n",
-      "작동 원리는 다중치환암호를 개선한 것이다. 다중치환 암호는 열쇠(key)값이 있을 때 그 열쇠값에 따라 암호화할 문장의 각 글자를 다른 글자로 치환한 암호를 의미한다. 에니그마는 기계적으로 다중치환 암호를 구현하고, 이에 스크램블러를 추가해 보안성을 강화했다.\n",
-      "그러나 튜링은 에니그마가 암호화와 복호화 둘 다 할 수 있다는 것에서 암호문의 스크램블러에 의한 효과를 없앴고, 자주 쓰이는 평문의 목록인 크립을 이용해서 이론적으로 에니그마를 해독할 수 있었다.\n",
-      "튜링은 수학, 암호학, 생물학 등 많은 분야에서 다양한 연구 활동을 했지만, 특히 컴퓨터 과학 분야에 끼친 영향이 크기 때문에 컴퓨터 과학 및 전산학의 아버지라고 불린다. 그가 구상한 튜링 기계의 무한히 긴 띠는 컴퓨터의 메모리에, 기호를 읽는 기계는 컴퓨터의 중앙 처리 장치(CPU)에 비유할 수 있다. 또한 튜링 기계의 한 종류인 범용 튜링 기계는 프로그램을 내장해서 작동하는 현대의 컴퓨터를 많이 닮아 있다. 이외에도 콜로서스 개발에 간접적인 기여를 했다.\n",
-      "계산기 학회(ACM)에서는 튜링의 공로를 기리기 위하여, 1966년부터 매년 컴퓨터 과학에 중요한 업적을 남긴 사람들한테 주는 튜링상을 제정하였다. 현재 튜링상은 컴퓨터 과학 분야의 노벨상이라고도 불린다. 또한 튜링 테스트를 통과하는 인공 지능에게는 뢰브너 상이 수여된다.[9]\n",
-      "애플 컴퓨터의 로고인 \"한 입 베어먹은 사과\"는 튜링을 연상시키지만, 애플 컴퓨터가 로고를 만들 때 튜링을 염두에 두고 만들었는지는 확실하지 않다.[10] 현재 애플 컴퓨터에서는 로고의 모델이 뉴턴의 사과라고 주장한다.(애플 컴퓨터를 창립한 스티브 잡스도 뉴턴의 사과를 모델로 애플 컴퓨터를 창립했다고 한다.)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'앨런 매티슨 튜링(영어: Alan Mathison Turing, OBE, FRS, 1912년 6월 23일 ~ 1954년 6월 7일)은 영국의 수학자, 암호학자, 논리학자이자 컴퓨터 과학의 선구적 인물이다. 알고리즘과 계산 개념을 튜링 기계라는 추상 모델을 통해 형식화함으로써 컴퓨터 과학의 발전에 지대한 공헌을 했다.[2][3][4] 튜링 테스트의 고안으로도 유명하다. ACM에서 컴퓨터 과학에 중요한 업적을 남긴 사람들에게 매년 시상하는 튜링상은 그의 이름을 따 제정한 것이다. 이론 컴퓨터 과학과 인공지능 분야에 지대한 공헌을 했기 때문에 \"컴퓨터 과학의 아버지\"라고 불린다.1945년에 그가 고안한 튜링 머신은 초보적 형태의 컴퓨터로, 복잡한 계산과 논리 문제를 처리할 수 있었다. 하지만 튜링은 1952년에 당시에는 범죄로 취급되던 동성애 혐의로 영국 경찰에 체포돼 유죄 판결을 받았다.[5] 감옥에 가는 대신 화학적 거세를 받아야 했던 그는, 2년 뒤 청산가리를 넣은 사과를 먹고 자살했다.[5]사후 59년만인 2013년 12월 24일에 엘리자베스 2세 여왕이 크리스 그레일링 법무부 장관의 건의를 받아들여 튜링의 동성애 죄를 사면하였다. 이어서 무죄 판결을 받고 복권되었다.[5]튜링은 1912년 아버지 줄리어스 매시슨 튜링과 에설 사라의 둘째 아들로 태어났다. 그의 어머니는 그를 인도(차트라프루)에서 임신했지만 영국에서 낳기 원해 런던(패딩턴)으로 가서 그를 출산했다. 어려서부터 총명하여 3주 만에 읽기를 배웠으며 계산과 퍼즐에 능했다고 한다.1931년 케임브리지 대학교 킹스 칼리지에 입학해 수학 전공으로 학사학위를 취득하고, 1935년 확률론 계산에서 한계중심정리에 관한 학위논문으로 킹스 칼리지 특별연구원이 되었다. 1936년 미국의 프린스턴 대학교 대학원에 입학하여 박사학위를 받았다. 1937년 영국으로 돌아와 대학에서 연구 중 튜링 기계의 개념을 도입한 논문 〈계산 가능한 수와 결정할 문제에의 응용〉을 발표했다.1938년 9월 블레츨리 정부 암호학교 GCCS(현 GCHQ)에 들어갔고, 1939년 9월 4일 제2차 세계 대전이 발발한 후 독일군의 에니그마 암호를 해독하는 Hut 8의 책임자가 되어 폴란드 정보부에서 제작한 에니그마 해독기 \\'Bomby\\'를 개선한 \\'봄브(The Bombe)\\'를 개발했다.이런 경험에서 만든 계산 이론은 후일 영국에서 개발되는 콜로서스(프로그래밍 가능 전자 컴퓨터)의 기술적 토대가 되기도 했다.앨런 튜링은 1951년에 영국에서 범죄로 인식되던 동성애 혐의로 체포된 후 징역형과 화학적 거세형 중 선택을 해야 했고, 튜링은 연구를 계속하기 위해 거세를 선택하여 1년간 에스트로겐 주사를 맞았다. 그는 1954년 6월 8일에 죽은 채로 발견되었고, 주변에 반쯤 먹은 사과가 놓여 있었다. 부검 결과 치사량의 사이안화 칼륨(청산가리)을 주사한 사과를 먹고 자살한 것으로 밝혀졌다.[6]튜링은 15살 때 처음으로 수학적 연구결과를 도출했다. 그것은 역탄젠트 함수의 무한한 연속을 어림잡을 수 있는 계산 형식으로, 크게 독창적이지는 않지만 이후 튜링의 연구의 전체적인 방향을 보여준다. 즉 그가 평생동안 연구했던 계산할 수 있는 실수의 개념이 들어가 있다.튜링은 케임브리지 대학교에서 수학을 전공했으며, 특히 막스 보른의 양자역학 강의와 리하르트 쿠란트의 미분 방정식 강의를 들으며 수치 해석을 비롯해 확률론, 통계학, 수 이론, 군론 등에 관심을 가졌다.1933년 튜링은 물리학자 에딩턴의 과학적 방법론을 수강하고 정규분포곡선(courbe normale)이라는 고전적 개념에 관심을 갖게 된다. 튜링은 자연 현상에서 규칙성 연구에서의 중심극한정리의 중요성을 이해하고, 독일의 수학자 린데베르크(Jarl Waldemar Lindeberg)가 1922년에 먼저 증명한 내용을 모르는 상태에서 이를 증명했다. 이 증명으로 그는 장학금을 받고 케임브리지 대학교의 특별연구원이 되었다.리만 가설 등 소수의 개수에 대한 문제를 접한 튜링은 수치상으로 제타 함수를 평가했다. 이 과정에서 튜링은 제타함수 계산에 쓸 기계를 만들기 위해 장학금을 받아냈으나, 전쟁으로 인해 무산되었다가 전쟁 이후 맨체스터 대학교에서 다시 시도하게 된다. 이 기계에는 몇 가지 문제점이 있었으나, 튜링은 1953년에 제타 함수에 대한 논문을 발표한다.군론은 튜링이 평생 연구해온 분야인 수치상의 문제나 계산의 유효성과 거리가 있다고 느껴질 수도 있으나, 가능한 모든 값의 치환을 통해 함수와 함수 풀이 영역 간의 구조적 상관성이라는 방법으로 튜링의 인생에 세 번의 영향을 주게 된다. 우선 1936년 튜링이 계산할 수 있는 수와 계산할 수 없는 수 사이의 경계선을 연구할 때 구조적인 계산의 유효성에 대한 기준을 제시했다. 다음으로 함수이론의 연장선의 문제였고 셋째는 군론을 간접적으로 수치 적용해 양자역학과 암호학에 이용했다. 양자역학에서 군론은 상태 개념에 연관되어 있고, 암호학에서는 치환 개념과 치환 불변성의 개념에 관련되어 있다.1936년 튜링은 결정가능성 문제에 대한 부정적 증명을 해낸 후 프린스턴 대학교로 떠나게 된다. 이 때 튜링은 수리논리학의 알론조 처치와 군론의 존 폰 노이만을 만나 새로운 학문의 장을 열게 된다. 3년의 학업 이후 폰 노이만이 조교로 남을 것을 권유했으나 정중히 거절한 튜링은 케임브리지로 다시 돌아왔다.튜링은 프린스턴 대학교에서 만난 처치와 함께 수리논리학의 연구를 계속하게 된다. 그는 해결 불가능성의 정도의 산술적 서열을 구축함으로써 해결 불가능성의 개념이 고려된 형식 체계 내에서 이루어진다는 인식 변화를 일구어냈다.암호학과 통계학 분야에서 튜링이 전쟁동안 진척시켰던 연구 작업은 1996년 미국 정부에 의해 폐기되는 등 공개에 어려움을 겪어, 전반적으로 알려지지 않았다.[7] 하지만 “튜링이 없었다면, 영국은 전쟁에서 분명 패했을 것이다”라는 동료 D.미치의 인터뷰 증언 등을 고려할 때 그의 업적을 짐작할 수 있다.[8] 널리 알려진 바처럼 튜링은 당시 에니그마라 칭해졌던 독일군의 암호를 해독해냈으며 당시 컴퓨터의 발달에도 큰 영향을 끼쳤다. 튜링은 수리논리학에서 정의된 계산, 조작 실행에 영향을 준 추상적 기계(알고리즘), 실행화시킨 물질적 기계를 토대로 이후 정보과학의 탄생에 큰 영향을 끼치게 된다.암호학은 수학, 논리학, 물리학에 연관된 분야로 튜링은 전쟁 선포 이후 암호학 부서(GCCS)에 들어갔다. 열 명 남짓의 연구팀의 수장이 된 튜링은 독일 베를린의 잠수정 등에서 보내온 메시지를 코드화하여 해독하는데 주력했다. 이 과정에서 튜링은 암호학의 새로운 기틀을 다졌으며 통계학과 기계화할 수 있는 논리적 방법을 통해 모순을 제거해 나갔다.정보 개념, 혹은 데이터의 중요도는 원래 통계학적 속성인데, 선험적(a priori)가설로부터 경험적(a posteriori) 확률을 계산할 수 있는 방법을 제시한다.앨런 튜링은 1945년 10월 1일 테딩턴에 위치한 국립물리연구소(National Physical Laboratory, NPL)에서 영국의 첫 번째 컴퓨터라 할 수 있는 전자 계산기 제작을 위한 수학 부서 창설을 추진했다. 그리고 맨체스터 대학교 등에서 컴퓨터에 대한 연구를 계속했다. 이 시기의 튜링은 전적으로 형태 발생과 수학적 모델화에 주력했다.아버지 줄리어스 매시슨 튜링(Julius Mathison Turing), 어머니 에설 사라(Ethel Sara)알론조 처치, 존 폰 노이만 등과 함께 프린스턴 대학교에서 연구 지속프린스턴 대학교에서 프록터(Procter)장학금 수여블레츨리 파크(Bletchley Park)의 GCCS 부서에서 영국을 포위하고 있는 독일 해군의 무선메시지 해독 작업 수행미국 암호부서와의 접촉을 위해 미국에 비밀리에 입국컴퓨터의 자동 계산 기계(Automatic Computing Engine; ACE)를 구축하기 위해 테딩턴에 있는 국립물리연구소(NPL)에 들어감생리학과 신경과학 수업 수강동성애 혐의로 재판을 받고 여성호르몬을 투여하는 형을 받음튜링 기계는 튜링이 알고리즘을 설명하기 위해 도입한 가상의 기계이다. 이 기계는 한정된 종류의 기호 중 하나를 기록할 수 있는 칸들이 무한히 이어진 띠와 각 칸의 정보를 읽고 수정하는 기계로 이루어져 있다. 그리고 튜링 머신의 상태와 칸에 기록된 기호에 따라 지정된 절차를 수행한다. 튜링 머신이 수행하는 절차는 1. 현재 기계가 위치하는 칸의 기호를 수정 2. 띠의 위치 이동 3. 튜링 머신의 상태 변경 이 있다.에니그마는 암호 작성과 해독을 돕는 기계로, 1918년 아르투스 슈르비우스에 의해 처음 고안되었다. 이 기계는 제 2차 세계 대전 동안 독일군이 군사 관련 정보를 암호화하는 데 쓰였다.작동 원리는 다중치환암호를 개선한 것이다. 다중치환 암호는 열쇠(key)값이 있을 때 그 열쇠값에 따라 암호화할 문장의 각 글자를 다른 글자로 치환한 암호를 의미한다. 에니그마는 기계적으로 다중치환 암호를 구현하고, 이에 스크램블러를 추가해 보안성을 강화했다.그러나 튜링은 에니그마가 암호화와 복호화 둘 다 할 수 있다는 것에서 암호문의 스크램블러에 의한 효과를 없앴고, 자주 쓰이는 평문의 목록인 크립을 이용해서 이론적으로 에니그마를 해독할 수 있었다.튜링은 수학, 암호학, 생물학 등 많은 분야에서 다양한 연구 활동을 했지만, 특히 컴퓨터 과학 분야에 끼친 영향이 크기 때문에 컴퓨터 과학 및 전산학의 아버지라고 불린다. 그가 구상한 튜링 기계의 무한히 긴 띠는 컴퓨터의 메모리에, 기호를 읽는 기계는 컴퓨터의 중앙 처리 장치(CPU)에 비유할 수 있다. 또한 튜링 기계의 한 종류인 범용 튜링 기계는 프로그램을 내장해서 작동하는 현대의 컴퓨터를 많이 닮아 있다. 이외에도 콜로서스 개발에 간접적인 기여를 했다.계산기 학회(ACM)에서는 튜링의 공로를 기리기 위하여, 1966년부터 매년 컴퓨터 과학에 중요한 업적을 남긴 사람들한테 주는 튜링상을 제정하였다. 현재 튜링상은 컴퓨터 과학 분야의 노벨상이라고도 불린다. 또한 튜링 테스트를 통과하는 인공 지능에게는 뢰브너 상이 수여된다.[9]애플 컴퓨터의 로고인 \"한 입 베어먹은 사과\"는 튜링을 연상시키지만, 애플 컴퓨터가 로고를 만들 때 튜링을 염두에 두고 만들었는지는 확실하지 않다.[10] 현재 애플 컴퓨터에서는 로고의 모델이 뉴턴의 사과라고 주장한다.(애플 컴퓨터를 창립한 스티브 잡스도 뉴턴의 사과를 모델로 애플 컴퓨터를 창립했다고 한다.)'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "본문목록 = soup.select('p')\n",
-    "\n",
-    "for 본문 in 본문목록:\n",
-    "    print(본문.text)"
+    "html.get_text()"
    ]
   },
   {
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -316,14 +307,13 @@
        "19  2013년         (사망 이후) 동성애 혐의에 대한 유죄가 정식으로 국왕 칙령을 통하여 사면됨"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "표목록 = soup.select('table.wikitable')\n",
-    "webscrap.html.extract_tables(표목록)[0]"
+    "html.extract_tables('table.wikitable')"
    ]
   },
   {
@@ -355,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -381,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
