--- a/email/email.ipynb
+++ b/email/email.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from bigpython.mail import EmailClient, EmailConfig"
+    "from bigpython.mail import EmailClient"
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -66,16 +66,16 @@
     {
      "data": {
       "text/plain": [
-       "<bigpython.mail.EmailClient at 0x1159250b8>"
+       "<bigpython.mail.EmailClient at 0x115d75400>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mail = EmailClient('imap.naver.com', ssl=True, debug=True)\n",
+    "mail = EmailClient('naver.com')\n",
     "mail"
    ]
   },
@@ -83,18 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "로그인"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mail.login()"
+    "## 로그인"
    ]
   },
   {
@@ -106,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -114,18 +103,18 @@
     {
      "data": {
       "text/plain": [
-       "{b'EXISTS': 4,\n",
+       "{b'EXISTS': 6,\n",
        " b'FLAGS': (b'\\\\Answered', b'\\\\Flagged', b'\\\\Deleted', b'\\\\Seen', b'\\\\Draft'),\n",
        " b'NOMODSEQ': [b''],\n",
        " b'PERMANENTFLAGS': (),\n",
        " b'READ-ONLY': [b''],\n",
        " b'RECENT': 0,\n",
-       " b'UIDNEXT': 196,\n",
+       " b'UIDNEXT': 198,\n",
        " b'UIDVALIDITY': 0,\n",
        " b'UNSEEN': [b'2']}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -323,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +323,7 @@
        "[]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +345,7 @@
        "['/Users/seongjoo/development/pyautomate/email/curriculum.xlsx']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -379,7 +368,7 @@
        " '/Users/seongjoo/development/pyautomate/email/note.jpg']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -401,7 +390,7 @@
        "['/Users/seongjoo/development/pyautomate/email/과정개요.xlsx']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -430,7 +419,7 @@
        "['/Users/seongjoo/Downloads/curriculum.xlsx']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -457,16 +446,78 @@
     {
      "data": {
       "text/plain": [
-       "b'Disconnected for inactivity.'"
+       "b'Logging out'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mail.logout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 이메일 보내기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "제목 = '이성주가 이성주에게'\n",
+    "본문 = '고맙습니다\\n감사합니다.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "비밀번호: ········\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = mail.send_message('lseongjoo@daum.net', 제목, 본문)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(result)"
    ]
   },
   {
