--- a/email/email.ipynb
+++ b/email/email.ipynb
@@ -58,25 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bigpython.mail.EmailClient at 0x115d75400>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mail = EmailClient('naver.com')\n",
-    "mail"
+    "mail = EmailClient('naver.com')"
    ]
   },
   {
@@ -95,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -103,18 +91,18 @@
     {
      "data": {
       "text/plain": [
-       "{b'EXISTS': 6,\n",
+       "{b'EXISTS': 8,\n",
        " b'FLAGS': (b'\\\\Answered', b'\\\\Flagged', b'\\\\Deleted', b'\\\\Seen', b'\\\\Draft'),\n",
        " b'NOMODSEQ': [b''],\n",
        " b'PERMANENTFLAGS': (),\n",
        " b'READ-ONLY': [b''],\n",
        " b'RECENT': 0,\n",
-       " b'UIDNEXT': 198,\n",
+       " b'UIDNEXT': 200,\n",
        " b'UIDVALIDITY': 0,\n",
        " b'UNSEEN': [b'2']}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -481,7 +469,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "보낼주소 = input('보낼 주소: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -495,25 +494,22 @@
     }
    ],
    "source": [
-    "result = mail.send_message('lseongjoo@daum.net', 제목, 본문)"
+    "result = mail.send_message(보낼주소, 제목, 본문)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "NoneType"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
     }
    ],
    "source": [
