--- a/web/autoform.ipynb
+++ b/web/autoform.ipynb
@@ -4,11 +4,42 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from bigpython import webscrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "뿅!\n"
+     ]
+    }
+   ],
+   "source": [
+    "time.sleep(3)\n",
+    "print('뿅!')"
    ]
   },
   {
@@ -31,55 +62,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting selenium\n",
-      "  Downloading selenium-2.53.5-py2.py3-none-any.whl (884kB)\n",
-      "Installing collected packages: selenium\n",
-      "Successfully installed selenium-2.53.5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 8.1.1, however version 8.1.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "chromedriver 다운로드\n",
       "File already exists\n",
       "chromedriver_mac32.zip\n",
-      "다운로드 받은 파일 압축 해제 ...\n",
-      "설정 테스트 ... 완료\n"
+      "다운로드 받은 파일 압축 해제 ...\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'chromedriver'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "webscrap.setup_webdriver()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "뿅!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "time.sleep(3)\n",
-    "print('뿅!')"
    ]
   },
   {
@@ -145,6 +146,107 @@
     "검색상자.submit()\n",
     "time.sleep(5)\n",
     "\n",
+    "chrome.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 동적 웹페이지 정보 추출\n",
+    "\n",
+    "종종 웹페이지는 여러 단계로 내부 호출이 이루어지거나, 페이지가 표시된 다음 계속해서 정보가 갱신될 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "naver_finance_url = 'http://finance.naver.com/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"num\">1,960.71</span>,\n",
+       " <span class=\"num\">669.30</span>,\n",
+       " <span class=\"num\">242.99</span>]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html = webscrap.get_html(naver_finance_url)\n",
+    "html.select(\".num_quot.up > .num\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "지속적으로 갱신되는 웹페이지의 정보를 가져오고자 하는 경우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016.06.29 14:30장중\t KOSPI: 1959.97\n",
+      "2016.06.29 14:30장중\t KOSPI: 1960.05\n",
+      "2016.06.29 14:30장중\t KOSPI: 1960.23\n",
+      "2016.06.29 14:30장중\t KOSPI: 1960.31\n",
+      "2016.06.29 14:30장중\t KOSPI: 1959.85\n",
+      "2016.06.29 14:31장중\t KOSPI: 1960.04\n",
+      "2016.06.29 14:31장중\t KOSPI: 1960.14\n",
+      "2016.06.29 14:31장중\t KOSPI: 1959.69\n",
+      "2016.06.29 14:31장중\t KOSPI: 1959.7\n",
+      "2016.06.29 14:31장중\t KOSPI: 1960.41\n"
+     ]
+    }
+   ],
+   "source": [
+    "chrome =  webscrap.get_browser()\n",
+    "chrome.get(naver_finance_url)\n",
+    "# 페이지 로딩 완료가 확실해질 가능성이 높은 시간까지 대기\n",
+    "time.sleep(3)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    KOSPI지표_요소 = chrome.find_element_by_css_selector(\".num_quot.up > .num\")\n",
+    "    시간표시_요소 = chrome.find_element_by_id('time')\n",
+    "\n",
+    "    KOSPI지표 = KOSPI지표_요소.text\n",
+    "    KOSPI지표 = KOSPI지표.replace(',', '')\n",
+    "    KOSPI지표 = float(KOSPI지표)\n",
+    "\n",
+    "    시간 = 시간표시_요소.text\n",
+    "\n",
+    "    print('{}\\t KOSPI: {}'.format(시간, KOSPI지표))\n",
+    "    \n",
+    "    time.sleep(10)\n",
+    "    \n",
     "chrome.quit()"
    ]
   },
