HTML dropdown 값 선택 예시 추가

--- a/web/autoform.ipynb
+++ b/web/autoform.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from bigpython import webscrap"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,6 +40,17 @@
    "source": [
     "time.sleep(3)\n",
     "print('뿅!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bigpython import webscrap"
    ]
   },
   {
@@ -146,6 +157,84 @@
     "검색상자.submit()\n",
     "time.sleep(5)\n",
     "\n",
+    "chrome.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dropdown 값 선택"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'file:///Users/seongjoo/development/codebasic/pyautomate/data/html/forms.html'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "경로 = os.path.abspath('../data/html/forms.html')\n",
+    "target_url = 'file://' + 경로\n",
+    "target_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "chrome = webscrap.get_browser()\n",
+    "chrome.get(target_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "elem_car_select = chrome.find_element_by_name('cars')\n",
+    "cars = webscrap.HtmlSelect(elem_car_select)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "value = 'porsche'\n",
+    "cars.select_by_value(\"porsche\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "chrome.quit()"
    ]
   },
